внедрил сервис статистики