@@ -12,12 +12,16 @@ import ru.practicum.ewm.event.model.Event;
 import ru.practicum.ewm.event.model.State;
 import ru.practicum.ewm.event.repository.EventRepository;
 import ru.practicum.ewm.exception.NotFoundException;
+import ru.practicum.ewm.request.model.RequestStatus;
+import ru.practicum.ewm.request.repository.RequestRepository;
 import ru.practicum.stats.client.StatsClient;
 import ru.practicum.stats.dto.ViewStatsDto;
 
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.*;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
 @Service
@@ -26,11 +30,13 @@ import java.util.stream.Collectors;
 public class PublicEventServiceImpl implements PublicEventService {
 
     private final EventRepository eventRepository;
+    private final RequestRepository requestRepository;
     private final EventMapper eventMapper;
     private final StatsClient statsClient;
 
     private static final DateTimeFormatter FORMATTER = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss");
     private static final LocalDateTime DISTANT_PAST = LocalDateTime.of(1970, 1, 1, 0, 0, 0);
+    private static final Pattern EVENT_URI_PATTERN = Pattern.compile("^/events/(\\d+)$");
 
     @Override
     public List<EventShortDto> getEvents(String text,
@@ -46,35 +52,49 @@ public class PublicEventServiceImpl implements PublicEventService {
 
         statsClient.hit("ewm-main-service", "/events", ip, LocalDateTime.now());
 
-        LocalDateTime start = (rangeStart == null) ? LocalDateTime.now() : rangeStart;
-        LocalDateTime end = (rangeEnd == null) ? LocalDateTime.now().plusYears(100) : rangeEnd;
+        LocalDateTime start = rangeStart != null ? rangeStart : LocalDateTime.now();
+        LocalDateTime end = rangeEnd != null ? rangeEnd : LocalDateTime.now().plusYears(100);
 
-        Sort sorting = (sort != null && sort.equals("EVENT_DATE")) ?
-                Sort.by("eventDate").ascending() : Sort.unsorted();
+        Sort sorting = "EVENT_DATE".equalsIgnoreCase(sort)
+                ? Sort.by("eventDate").ascending()
+                : Sort.unsorted();
 
         PageRequest page = PageRequest.of(from / size, size, sorting);
 
         List<Event> events = eventRepository.findPublicEvents(text, categories, paid, start, end, page);
 
-        if (onlyAvailable != null && onlyAvailable) {
+        // Filter only available events if requested
+        if (Boolean.TRUE.equals(onlyAvailable)) {
+            Map<Long, Long> confirmedMap = getConfirmedRequestsMap(
+                    events.stream().map(Event::getId).collect(Collectors.toList())
+            );
             events = events.stream()
-                    .filter(e -> e.getParticipantLimit() == 0 || getConfirmedRequests(e.getId()) < e.getParticipantLimit())
-                    .toList();
+                    .filter(e -> e.getParticipantLimit() == 0 ||
+                            confirmedMap.getOrDefault(e.getId(), 0L) < e.getParticipantLimit())
+                    .collect(Collectors.toList());
         }
 
+        // Fetch views and confirmed requests in bulk
         Map<Long, Long> viewsMap = getViewsForEvents(events);
+        Map<Long, Long> confirmedMap = getConfirmedRequestsMap(
+                events.stream().map(Event::getId).collect(Collectors.toList())
+        );
 
         List<EventShortDto> dtos = events.stream()
-                .map(eventMapper::toShortDto)
-                .peek(dto -> dto.setViews(viewsMap.getOrDefault(dto.getId(), 0L)))
-                .toList();
+                .map(event -> {
+                    EventShortDto dto = eventMapper.toShortDto(event);
+                    dto.setConfirmedRequests(confirmedMap.getOrDefault(event.getId(), 0L));
+                    dto.setViews(viewsMap.getOrDefault(event.getId(), 0L));
+                    return dto;
+                })
+                .collect(Collectors.toList());
 
-        if (sort != null && sort.equals("VIEWS")) {
-            dtos = dtos.stream()
-                    .sorted(Comparator.comparing(EventShortDto::getViews).reversed())
-                    .skip(from)
-                    .limit(size)
-                    .collect(Collectors.toList());
+        // Apply VIEWS sorting client-side if requested
+        if ("VIEWS".equalsIgnoreCase(sort)) {
+            dtos.sort(Comparator.comparing(EventShortDto::getViews).reversed());
+            int toIndex = Math.min(from + size, dtos.size());
+            if (from > dtos.size()) return List.of();
+            dtos = dtos.subList(from, toIndex);
         }
 
         return dtos;
@@ -87,40 +107,49 @@ public class PublicEventServiceImpl implements PublicEventService {
         Event event = eventRepository.findByIdAndState(id, State.PUBLISHED)
                 .orElseThrow(() -> new NotFoundException("Event with id=" + id + " not found or not published"));
 
+        Long confirmedRequests = requestRepository.countByEventIdAndStatus(id, RequestStatus.CONFIRMED);
         Map<Long, Long> viewsMap = getViewsForEvents(List.of(event));
 
         EventFullDto dto = eventMapper.toFullDto(event);
+        dto.setConfirmedRequests(confirmedRequests);
         dto.setViews(viewsMap.getOrDefault(id, 0L));
 
         return dto;
     }
 
+    private Map<Long, Long> getConfirmedRequestsMap(List<Long> eventIds) {
+        if (eventIds.isEmpty()) return Collections.emptyMap();
+
+        return requestRepository.findAllByEventIdInAndStatus(eventIds, RequestStatus.CONFIRMED).stream()
+                .collect(Collectors.groupingBy(
+                        req -> req.getEvent().getId(),
+                        Collectors.counting()
+                ));
+    }
+
     private Map<Long, Long> getViewsForEvents(List<Event> events) {
-        if (events.isEmpty()) {
-            return Collections.emptyMap();
-        }
+        if (events.isEmpty()) return Collections.emptyMap();
 
         List<String> uris = events.stream()
                 .map(e -> "/events/" + e.getId())
                 .collect(Collectors.toList());
 
-        LocalDateTime earliest = events.stream()
+        LocalDateTime start = events.stream()
                 .map(Event::getPublishedOn)
                 .filter(Objects::nonNull)
                 .min(LocalDateTime::compareTo)
                 .orElse(DISTANT_PAST);
 
-        List<ViewStatsDto> stats = statsClient.getStats(earliest, LocalDateTime.now(), uris, true);
+        List<ViewStatsDto> stats = statsClient.getStats(start, LocalDateTime.now(), uris, true);
 
-        return stats.stream()
-                .collect(Collectors.toMap(
-                        s -> Long.parseLong(s.getUri().split("/")[2]),
-                        ViewStatsDto::getHits
-                ));
-    }
-
-    // Stub for confirmedRequests, replace with actual if implemented
-    private long getConfirmedRequests(Long eventId) {
-        return 0L; // Assume no requests or implement with RequestRepository
+        Map<Long, Long> viewsMap = new HashMap<>();
+        for (ViewStatsDto stat : stats) {
+            Matcher matcher = EVENT_URI_PATTERN.matcher(stat.getUri());
+            if (matcher.matches()) {
+                Long eventId = Long.parseLong(matcher.group(1));
+                viewsMap.put(eventId, stat.getHits());
+            }
+        }
+        return viewsMap;
     }
 }
